fixed navbar alignment on facilities pages

--- a/css/usa.css
+++ b/css/usa.css
@@ -1,7 +1,7 @@
 h3 {
     margin-bottom: 20px;
 }
-ul {
+main ul {
     margin-left: -36px;
     padding-bottom: 24px;
 }
